# quorum

./: .gitignore  README.md  docker-compose.yml  justfile  package-lock.json  package.json
backend/: .env.example  Dockerfile  README.md  docker-compose.yml  justfile  pyproject.toml
backend/quorum/: __init__.py  main.py
backend/quorum/api/: main.py
backend/quorum/api/routes/: stub.py  ws.py
backend/quorum/core/: config.py  connection.py  state.json  state.py
frontend/: Dockerfile  eslint.config.js  package-lock.json  package.json  svelte.config.js  tailwind.config.js
frontend/src/: App.svelte  app.css
frontend/src/lib/: state.svelte.js  websocket.js  websocket.svelte.js  ws.svelte.js
frontend/src/lib/components/: Graph.svelte
frontend/src/lib/utils/: Counter.svelte.js
frontend/src/routes/: +page.svelte
